--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>172957299404-og8ib3odfb9bpd0mn3jqoangb3i91ead.apps.googleusercontent.com</string>
+	<string>549040988255-2l3h3ge33ofioeokh55a95lftif6rn2j.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.172957299404-og8ib3odfb9bpd0mn3jqoangb3i91ead</string>
+	<string>com.googleusercontent.apps.549040988255-2l3h3ge33ofioeokh55a95lftif6rn2j</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>172957299404-aea74n010brahnl8cmtvhd82jfqu6ufu.apps.googleusercontent.com</string>
+	<string>549040988255-v5rah16v72u73177n8jhvirl1f4hvh9p.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAMqguu8dw7p6Zly3kXfpvPkQ1Mh0YRxd8</string>
+	<string>AIzaSyBbpuxDCIL_q5MSIHbjNMdKuvRap9X5jtw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>172957299404</string>
+	<string>549040988255</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.appstonelab.myrecipes</string>
 	<key>PROJECT_ID</key>
-	<string>my-recipes-keeper</string>
+	<string>recipe-9cf10</string>
 	<key>STORAGE_BUCKET</key>
-	<string>my-recipes-keeper.appspot.com</string>
+	<string>recipe-9cf10.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:172957299404:ios:c7951ec1891e843dea0869</string>
-	<key>DATABASE_URL</key>
-	<string>https://my-recipes-keeper.firebaseio.com</string>
+	<string>1:549040988255:ios:01653840631e9ead023bea</string>
 </dict>
 </plist>
