--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^2.31.1
   firebase_remote_config: ^4.4.6
   firebase_analytics: ^10.10.6
+  firebase_messaging: ^14.9.3
 
 
 dev_dependencies:
